tests/types_first_reasons/destructured_param_default_dep.js
// @flow

import f from './destructured_param_default';
f(0); // error
